--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# API Configuration
+# URL of your RAG backend API (without /api/v1 suffix)
 NEXT_PUBLIC_API_URL=
+
+# Optional: Analytics
+# Google Analytics ID
 NEXT_PUBLIC_GA_ID=
+
+# Optional: Sentry Error Tracking
 NEXT_PUBLIC_SENTRY_DSN=
